Stage 2 - not big changes

--- a/P_Observer/P_Observer/P_Observer.csproj
+++ b/P_Observer/P_Observer/P_Observer.csproj
@@ -46,7 +46,7 @@
     <Compile Include="IDisplayElement.cs" />
     <Compile Include="IObserver.cs" />
     <Compile Include="ISubject.cs" />
-    <Compile Include="John.cs" />
+    <Compile Include="Subscriber.cs" />
     <Compile Include="Newspaper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
